<resources>
    <string name="app_name">Free Music</string>
    <string name="scheme">freemusic</string>

    <string name="genres_fragment">Genres Fragment</string>
    <string name="search_genre">Search music with this genre</string>
    <string name="description_artist_image">Image of the artist</string>
    <string name="description_track_image">Image of the track</string>
    <string name="no_connection">No network connection</string>
    <string name="dialog_connection_button_positive">Yes</string>
    <string name="dialog_connection_button_negative">No</string>
    <string name="dialog_connection_title">Connection error</string>
    <string name="dialog_connection_message">Open wifi settings</string>
    <string name="no_data">No data</string>
    <string name="label_artist">artist:</string>
    <string name="description_track_count">Track count</string>
    <string name="toast_item_load_error">Can\'t load extra data of an item</string>
    <string name="label_songs">Songs</string>
    <string name="album_detail_info">Album detail information</string>
    <string name="error_load_more">Can\'t load more data. Try again.</string>
    <string name="button_play_pause">play/pause button</string>
    <string name="description_album_image">Image of the album</string>
    <string name="progress_start_val">00:00</string>
    <string name="playing">Playing</string>
    <string name="now_playing">Playing %1$s</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="description_blurred_image"/>
    <string name="right_arrow_desc"/>
    <string name="label_albums">Albums</string>

    <string name="artist_location">Location: %1$s</string>
    <string name="artist_favourites">Favourites count: %1$d</string>
    <string name="artist_comments">Comments count: %1$d</string>
    <string name="artist_bio">Artist Bio</string>
    <string name="artist_creation_date">Created: %1$s</string>
    <string name="no_more_tracks_to_load">There are no any more tracks to load in album %1$s</string>
    <string name="free_music_app">Free Music \nApp</string>
    <string name="button_mute_description">Mute/UnMute volume</string>
    <string name="toast_back_to_exit">Click back button again to exit the app</string>
    <string name="no_permition_for_write_to_external_storage">Writable storage is not available</string>
    <string name="track_save_success">Track %1$s successfully saved</string>
    <string name="button_download">Download</string>
    <string name="download_in_process">Downloading...</string>
    <string name="view_license">License</string>
    <string name="empty_license_url">License of song %1$s is empty</string>
    <string name="file_already_exists">File %1$s already exists</string>
    <string name="started_from_branch_deeplink">Free Music started via branch deep link</string>
    <string name="search_title">Search</string>
    <string name="title_toolbar">Free Music</string>
    <string name="search_hint">Search</string>
    <string name="artist_name_wrapper">[ %1$s ]</string>
</resources>
