<RelativeLayout
    android:id="@+id/main_detail_container"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/track_detail_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="300dp">

            <ImageView
                android:id="@+id/track_detail_image_container"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/description_blurred_image"
                android:scaleType="centerCrop"/>

            <ImageView
                android:id="@+id/track_image"
                android:layout_width="180dp"
                android:layout_height="180dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="50dp"
                android:contentDescription="@string/description_track_image"
                android:scaleType="centerCrop"/>

            <TextView
                android:id="@+id/track_title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ellipsize="end"
                android:gravity="bottom|center_horizontal"
                android:lines="1"
                android:paddingBottom="@dimen/padding_size_larger"
                android:paddingLeft="@dimen/padding_size_large"
                android:paddingRight="@dimen/padding_size_large"
                android:paddingTop="@dimen/padding_size_large"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_detail_title"
                android:textStyle="bold"/>

        </FrameLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_size_medium"
            android:gravity="center_vertical"
            android:paddingBottom="@dimen/padding_size_medium">

            <TextView
                android:id="@+id/progress_passed"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:gravity="center"
                android:paddingLeft="@dimen/padding_size_normal"
                android:paddingRight="@dimen/padding_size_small"
                android:text="@string/progress_start_val"
                android:textSize="@dimen/text_size_normal"/>

            <SeekBar
                android:id="@+id/seek_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_toLeftOf="@+id/song_time"
                android:layout_toRightOf="@id/progress_passed"
                android:background="@drawable/progress_bar"
                android:maxHeight="1dp"
                android:minHeight="1dp"
                android:thumb="@color/transparent_orange"/>

            <TextView
                android:id="@id/song_time"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:gravity="center"
                android:paddingLeft="@dimen/padding_size_small"
                android:paddingRight="@dimen/padding_size_normal"
                android:text="@string/progress_start_val"
                android:textSize="@dimen/text_size_normal"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/player_controls"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_margin="@dimen/margin_size_normal"
            android:gravity="center_vertical">

            <ImageButton
                android:id="@+id/button_previous"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/padding_size_normal"
                android:layout_marginRight="@dimen/padding_size_normal"
                android:layout_toLeftOf="@+id/button_play_pause"
                android:layout_toStartOf="@+id/button_play_pause"
                android:background="@drawable/button_selector"
                android:contentDescription="@string/button_play_pause"
                android:src="@drawable/ic_av_previous"/>

            <ImageView
                android:id="@id/button_play_pause"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_centerInParent="true"
                android:layout_marginLeft="@dimen/padding_size_normal"
                android:layout_marginRight="@dimen/padding_size_normal"
                android:background="@drawable/circle_button_selector"
                android:contentDescription="@string/button_play_pause"
                android:padding="@dimen/padding_size_small"
                android:src="@drawable/ic_av_play"/>

            <ImageButton
                android:id="@+id/button_next"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/padding_size_normal"
                android:layout_marginRight="@dimen/padding_size_normal"
                android:layout_toEndOf="@id/button_play_pause"
                android:layout_toRightOf="@id/button_play_pause"
                android:background="@drawable/button_selector"
                android:contentDescription="@string/button_play_pause"
                android:src="@drawable/ic_av_next"/>

            <ImageButton
                android:id="@+id/button_volume"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/padding_size_normal"
                android:layout_marginRight="@dimen/padding_size_normal"
                android:layout_toEndOf="@id/button_next"
                android:layout_toRightOf="@id/button_next"
                android:background="@drawable/music_button_selector"
                android:contentDescription="@string/button_mute_description"/>

        </RelativeLayout>

        <com.github.rahatarmanahmed.cpv.CircularProgressView
            android:id="@+id/progress_detail_view"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="@dimen/progress_icon_size"
            android:layout_height="@dimen/progress_icon_size"
            android:layout_gravity="bottom|center_horizontal"
            android:layout_marginTop="@dimen/margin_size_large"
            android:visibility="visible"
            app:cpv_animAutostart="true"
            app:cpv_color="@color/lighter_grey"
            app:cpv_indeterminate="true"/>

    </LinearLayout>

    <include layout="@layout/fragment_base"/>

</RelativeLayout>

